hot-fix-iphone-editor: Editor call wrapped in try..catch.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -179,6 +179,12 @@ time,
     padding: 0;
 }
 
+.new-answer textarea {
+    width: 100%;
+    border: none;
+    padding: 0.5em;
+}
+
 .new-answer .form-group {
     margin: 0;
 }
